--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,29 @@
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
+# Laravel
+/node_modules/
+/vendor/
 .env
-.env.backup
-.env.production
-.phpunit.result.cache
+.env.*.local
+/storage/*.key
+/storage/framework/cache/
+/storage/framework/views/
+/storage/logs/
+/storage/app/public/
+/bootstrap/cache/
 Homestead.json
 Homestead.yaml
 auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
-/.idea
-/.vscode
+.phpunit.result.cache
+
+# Vue/JS
+/public/build/
+/public/hot/
+/public/js/
+/public/css/
+/public/mix-manifest.json
+npm-debug.log*
+yarn-error.log*
+
+# IDEs
+/.fleet/
+/.idea/
+/.vscode/
