--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,20 @@
 .env
 .env.*.local
 /storage/*.key
+/public/storage
+/storage/app/public/
 /storage/framework/cache/
 /storage/framework/views/
 /storage/logs/
-/storage/app/public/
 /bootstrap/cache/
-Homestead.json
-Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
-/.idea
-/.vscode
+/.idea/
+/.vscode/
+
+# Vue/JS
+/public/js/
+/public/css/
+/public/hot
+/public/storage
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
