--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.2.3",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-vite-plugin": "^1.2.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "vite": "^5.4.18"
     },
     "dependencies": {
+        "@turf/turf": "^7.2.0",
         "leaflet": "^1.9.4",
         "leaflet-draw": "^1.0.4",
+        "leaflet-geometryutil": "^0.10.3",
         "vue": "^3.5.13",
         "vue-leaflet": "^0.1.0"
     }
