--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "leaflet-draw": "^1.0.4",
         "leaflet-geometryutil": "^0.10.3",
         "vue": "^3.5.13",
-        "vue-leaflet": "^0.1.0"
+        "vue-leaflet": "^0.1.0",
+        "vue-router": "^4.5.1"
     }
 }
